adjusting SQL queries inside SQL command file

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,10 +6,129 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Unknown string format: @PPathole Dojo isnÃÂ¢ÃÂÃÂt needed, but will make self-driving better. It isnÃÂ¢ÃÂÃÂt enough to be safer than human drivers, Autopilot ultimately needs to be more than 10 times safer than human drivers. present at position 0\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Unknown string format: #privacy is a human right. learn how to make your #bitcoin transactions more private in this clip: https://t.co/fnadsxffcu https://t.co/nznajw8g2m present at position 0\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=String does not contain a date: (bitcoin)\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=String does not contain a date: LTC\n",
+      "Warning: column is not a date format=String does not contain a date: Litecoin\n",
+      "Warning: column is not a date format=String does not contain a date: Charlie Lee\n",
+      "Warning: column is not a date format=String does not contain a date: UTXO\n",
+      "Warning: column is not a date format=String does not contain a date: Payment\n",
+      "Warning: column is not a date format=String does not contain a date: Fast transaction speeds, low fees, established\n",
+      "Warning: column is not a date format=String does not contain a date: Less secure than Bitcoin, less decentralized\n",
+      "Warning: column is not a date format=String does not contain a date: United States\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=Unknown string format: 0x2d1130feb4413ecac6d337b5ab8d59c73ac0f8bc726fce0bd7156c8fc3c691fa\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not int64\n",
+      "Warning: column is not a date format=String does not contain a date: Sell\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=String does not contain a date:  DAFI\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=String does not contain a date:  ETH\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n",
+      "Warning: column is not a date format=Unknown string format: Uniswap V2 present at position 0\n",
+      "Warning: column is not a date format=Parser must be a string or character stream, not float64\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "python: can't open file 'c:\\\\Users\\\\user\\\\OneDrive\\\\Documents\\\\SE_Factory\\\\FSD\\\\Tech\\\\data_analysis_saturn_group\\\\bitcoin.py': [Errno 2] No such file or directory\n"
+      "c:\\Users\\user\\OneDrive\\Documents\\SE_Factory\\FSD\\Tech\\data_analysis_saturn_group\\database_handler.py:64: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  return_dataframe = pd.read_sql_query(con= db_session, sql= file_executor)\n"
      ]
     }
    ],
